# rl-algorithms-guide

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: 00_getting_started.md  INSTALL.md
docs/01_bandits/: README.md  cheatsheet.md  theory.md
docs/02_tabular/: README.md  cheatsheet.md  mdp.md  theory.md
docs/03_dqn/: README.md  theory.md
docs/04_pg_ac/: README.md  pre_theory.md  theory.md
examples/01_bandits/: train_compare.py
examples/02_tabular/: train_cliffwalking.py  train_gridworld_dp.py
examples/03_dqn/: train_dqn_cartpole.py  train_dqn_lunarlander.py  train_sb3_cartpole.py  train_sb3_lunarlander.py
examples/04_pg_ac/: train_a2c_cartpole.py  train_actor_critic_cartpole.py  train_reinforce_cartpole.py
src/rl_algorithms_guide/bandits/: __init__.py  bandit_envs.py  epsilon_greedy.py  ucb.py
src/rl_algorithms_guide/common/: gym_utils.py  plotting.py  seeding.py
src/rl_algorithms_guide/dqn/: __init__.py  dqn.py
src/rl_algorithms_guide/pg_ac/: __init__.py  a2c.py  actor_critic.py  reinforce.py
src/rl_algorithms_guide/tabular/: __init__.py  expected_sarsa.py  gridworld.py  policy_iteration.py  q_learning.py  sarsa.py  value_iteration.py
tests/: __init__.py  test_bandits.py  test_dqn.py  test_pg_ac_utils.py  test_tabular_dp.py  test_td_updates.py
