[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-algorithms-guide"
version = "0.1.0"
description = "Beginner friendly Reinforcement Learning algorithms with runnable examples."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Samuele Pesacane" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "gymnasium>=0.29",
]

[project.optional-dependencies]
# Optional dependencies, grouped by what they are for. Install only what a block
# needs, like `pip install -e ".[deep]"`, or combine them, like `pip install -e ".[sb3,box2d]"`

# PyTorch, used by every from-scratch neural block (DQN onward).
deep = [
  "torch>=2.1",
]
# Stable-Baselines3: the tuned library we compare our own code against
# (the train_sb3_* scripts).
sb3 = [
  "stable-baselines3>=2.2",
]
# Adds TRPO, the one block 05 algorithm that core SB3 is missing. Installing
# this also brings SB3 itself in.
sb3-contrib = [
  "sb3-contrib>=2.2",
]
# Box2D environments (LunarLander, blocks 03 and 05). swig is what builds them.
box2d = [
  "swig>=4.2",
  "gymnasium[box2d]>=0.29",
]
# d3rlpy: the library we compare our own offline RL against (block 08).
offline = [
  "d3rlpy>=2.8",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]
# Everything at once (handy for development; pulls every optional baseline).
all = [
  "torch>=2.1",
  "stable-baselines3>=2.2",
  "sb3-contrib>=2.2",
  "swig>=4.2",
  "gymnasium[box2d]>=0.29",
  "d3rlpy>=2.8",
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
